RESOLVED FIXED204789
MediaRecorderPrivateWriter should not be destroyed until finishing its writing task completion handler is called
https://bugs.webkit.org/show_bug.cgi?id=204789
Summary MediaRecorderPrivateWriter should not be destroyed until finishing its writin...
youenn fablet
Reported 2019-12-03 03:27:14 PST
MediaRecorderPrivateWriter should not be destroyed until finishing its writing task completion handler is called
Attachments
Patch (2.91 KB, patch)
2019-12-03 03:36 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-12-03 03:27:24 PST
youenn fablet
Comment 2 2019-12-03 03:36:20 PST
WebKit Commit Bot
Comment 3 2019-12-03 07:01:22 PST
Comment on attachment 384702 [details] Patch Clearing flags on attachment: 384702 Committed r253040: <https://trac.webkit.org/changeset/253040>
WebKit Commit Bot
Comment 4 2019-12-03 07:01:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.