MediaRecorderPrivateWriter should not be destroyed until finishing its writing task completion handler is called https://bugs.webkit.org/show_bug.cgi?id=204789 <rdar://problem/57561143>

Reviewed by Eric Carlson.

When stopping the recorder, we might stop recording the private writer without calling fetchData.
In that case, we do not wait for the writing completion handler.
Fix this by using the semaphore at the end of stopRecording.
Covered by existing test.

* platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.mm:
(WebCore::MediaRecorderPrivateWriter::stopRecording):
(WebCore::MediaRecorderPrivateWriter::fetchData):


Canonical link: https://commits.webkit.org/218005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253040 268f45cc-cd09-0410-ab3c-d52691b4dbfc